force-app/main/default/objects/Opportunity/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account.ShippingStreet &amp; BR() &amp; 
Account.ShippingCity &amp; &apos;, &apos; &amp; Account.ShippingState &amp; &apos;, &apos; &amp; Account.ShippingPostalCode &amp; &apos;, &apos; &amp; Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>