force-app/main/default/objects/Opportunity/fields/Account_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Division__c</fullName>
    <description>Division from Account record</description>
    <formula>Account.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division Name</label>
    <type>Text</type>
</CustomField>