force-app/main/default/objects/Opportunity/fields/Account_Owner_equal_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_equal_Opportunity_Owner__c</fullName>
    <formula>Owner.Person_Name__c =   Account.Owner.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner equal Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>