force-app/main/default/objects/Opportunity/fields/Account_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Business__c</fullName>
    <formula>text(Account.Primary_Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Primary Business</label>
    <type>Text</type>
</CustomField>