force-app/main/default/objects/Opportunity/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>if(  Account.Expired__c = TRUE , 
IMAGE(&quot;https://cleanharbors--c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000002ebaI&quot;, &quot;Expired&quot;) 
, 
text( Account.Cycle__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>