force-app/main/default/objects/Opportunity/fields/Age_from_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_from_Close_Date__c</fullName>
    <formula>TODAY() - CloseDate</formula>
    <label>Age from Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>