force-app/main/default/objects/Opportunity/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <description>Rollup of Annualized Service value from Opportunity Product</description>
    <label>Annualized Amount</label>
    <summarizedField>OpportunityLineItem.Annualized_Service__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>