force-app/main/default/objects/Opportunity/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <label>Assigned to</label>
    <type>TextArea</type>
</CustomField>