force-app/main/default/objects/Opportunity/fields/Backhaul_Lane__c.field-meta.xml
<CustomField>
    <fullName>Backhaul_Lane__c</fullName>
    <label>Backhaul Lane</label>
    <length>255</length>
    <type>Text</type>
</CustomField>