force-app/main/default/objects/Opportunity/fields/Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Due_Date__c</fullName>
    <description>Date Bid is due for this opportunity</description>
    <label>Bid Due Date</label>
    <type>Date</type>
</CustomField>