force-app/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <inlineHelpText>This field is read only and populated by lead conversion as reference only.  The Branch is specified on the line of business when adding a product to the opportunity.</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>