force-app/main/default/objects/Opportunity/fields/Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address__c</fullName>
    <description>Branch Address used for fs quote template</description>
    <label>Branch Address</label>
    <type>TextArea</type>
</CustomField>