force-app/main/default/objects/Opportunity/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EXISTING-One Time</fullName>
            </value>
            <value>
                <fullName>EXISTING-Recurring</fullName>
            </value>
            <value>
                <fullName>NEW-One Time</fullName>
            </value>
            <value>
                <fullName>NEW-Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>