force-app/main/default/objects/Opportunity/fields/Call_Center_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Center Opportunity</label>
    <type>Checkbox</type>
</CustomField>