force-app/main/default/objects/Opportunity/fields/CEC_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CEC_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corporate Executive Council Member</description>
    <label>CEC Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>