force-app/main/default/objects/Opportunity/fields/Competitor_contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_contract_end_date__c</fullName>
    <description>Customer has an existing contract with a competitor that ends on this day.</description>
    <inlineHelpText>Customer has an existing contract with a competitor that ends on this day.</inlineHelpText>
    <label>Competitor contract end date</label>
    <type>Date</type>
</CustomField>