force-app/main/default/objects/Opportunity/fields/Competitor_Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Contract_Rate__c</fullName>
    <description>Existing Competitor Contract Rate</description>
    <inlineHelpText>Existing Competitor Contract Rate</inlineHelpText>
    <label>Competitor Contract Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>