force-app/main/default/objects/Opportunity/fields/Contamination_Source__c.field-meta.xml
<CustomField>
    <fullName>Contamination_Source__c</fullName>
    <description>Contamination source related to the opportunity</description>
    <label>Contamination Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antifreeze</fullName>
            </value>
            <value>
                <fullName>Chlordane</fullName>
            </value>
            <value>
                <fullName>Flammable liquid</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>PCB</fullName>
            </value>
            <value>
                <fullName>Solvent</fullName>
                <isActive>false</isActive>
                <label>Solvent</label>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>