force-app/main/default/objects/Opportunity/fields/Corp_Key_Account_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Corp_Key_Account_Support_Person__c</fullName>
    <formula>IF (OR(Account.RecordType.Name = &quot;Corporate&quot;, Account.RecordType.Name = &quot;Key Account&quot;),  Account.KAM_Support__r.FirstName&amp;&quot; &quot;&amp;Account.KAM_Support__r.LastName, Account.Key_Account_Support_Person__c)</formula>
    <label>Corp/Key Account Support Person</label>
    <type>Text</type>
</CustomField>