force-app/main/default/objects/Opportunity/fields/Created_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Me__c</fullName>
    <formula>IF(CreatedById = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me</label>
    <type>Checkbox</type>
</CustomField>