force-app/main/default/objects/Opportunity/fields/Created_via_Salesforce1__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Salesforce1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Salesforce1</label>
    <type>Checkbox</type>
</CustomField>