force-app/main/default/objects/Opportunity/fields/Creator_ID__c.field-meta.xml
<CustomField>
    <fullName>Creator_ID__c</fullName>
    <label>Creator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>