force-app/main/default/objects/Opportunity/fields/Creator_Username__c.field-meta.xml
<CustomField>
    <fullName>Creator_Username__c</fullName>
    <label>Creator Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>