force-app/main/default/objects/Opportunity/fields/Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell__c</fullName>
    <formula>IF(
AND(
OR (
ISPICKVAL( Account.Primary_Service_Provider_New__c , &apos;SK ENV&apos;),
ISPICKVAL( Account.Primary_Service_Provider_New__c , &apos;SK BPS&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Emerald Services&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Kleen Performance Products&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Murphys Oil&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Performance Plus Products&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Safety-Kleen&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;Thermo Fluids&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;CYN Environmental&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;CYN Oil&apos;),
ISPICKVAL(Owner.Primary_Business__c, &apos;BPS&apos;)
),ISPICKVAL(Opportunity_Primary_Business__c , &apos;Clean Harbors&apos;)
), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cross Sell</label>
    <type>Checkbox</type>
</CustomField>