force-app/main/default/objects/Opportunity/fields/Cross_Sell_Quote_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Quote_Request_Status__c</fullName>
    <label>Cross Sell Quote Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Requested</fullName>
            </value>
            <value>
                <fullName>Quote Support Assigned</fullName>
            </value>
            <value>
                <fullName>Quote in Progress</fullName>
            </value>
            <value>
                <fullName>Quote Completed</fullName>
            </value>
            <value>
                <fullName>Stalled By Client</fullName>
            </value>
            <value>
                <fullName>Job Schedule Requested</fullName>
            </value>
            <value>
                <fullName>Job Scheduled</fullName>
            </value>
            <value>
                <fullName>Additional Scheduling Required</fullName>
            </value>
            <value>
                <fullName>Waiting For More Information</fullName>
            </value>
            <value>
                <fullName>Job Being Scoped</fullName>
            </value>
            <value>
                <fullName>Quote Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>