force-app/main/default/objects/Opportunity/fields/Data_Loader_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Identifier__c</fullName>
    <description>Will be used when loading MSD opportunities during the transition from MSD to Salesforce</description>
    <label>Data Loader Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>