force-app/main/default/objects/Opportunity/fields/Date_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Opportunity_Closed__c</fullName>
    <description>Date Opportunity Marked Closed</description>
    <label>Date Opportunity Closed</label>
    <type>Date</type>
</CustomField>