force-app/main/default/objects/Opportunity/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>if(CloseDate-Datevalue(CreatedDate)&lt;0,CloseDate-datevalue( Insert_Date__c),IF(and(isblank(Date_Opportunity_Closed__c),CONTAINS(text(StageName), &quot;Close&quot;)),(CloseDate-Datevalue(CreatedDate)), 
If(and(not(isblank(Date_Opportunity_Closed__c)),CONTAINS(text(StageName), &quot;Close&quot;)), Date_Opportunity_Closed__c - DATEVALUE(CreatedDate), 
TODAY()- DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>