force-app/main/default/objects/Opportunity/fields/Days_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Close__c</fullName>
    <description>Red Flag if Close date is past due</description>
    <formula>if(  IsClosed = True,  &quot;Closed&quot;
,
if( CloseDate &lt;today(),
IMAGE(&quot;https://cleanharbors--c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000002mgBe&quot;, &quot;Past Due&quot;)
,
text( Days_Until_Close_Number__c )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close</label>
    <type>Text</type>
</CustomField>