force-app/main/default/objects/Opportunity/fields/Days_Until_Close_Number__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Close_Number__c</fullName>
    <formula>if(isblank(CloseDate),0,CloseDate  - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>