force-app/main/default/objects/Opportunity/fields/Deal_LOB__c.field-meta.xml
<CustomField>
    <fullName>Deal_LOB__c</fullName>
    <defaultValue>&quot;LOB?&quot;</defaultValue>
    <description>Last Deal LOB selected</description>
    <label>Deal LOB</label>
    <length>250</length>
    <type>Text</type>
</CustomField>