force-app/main/default/objects/Opportunity/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <description>deal name with date</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id , text(CloseDate) &amp; &quot; - &quot; &amp; Deal_LOB__c &amp; &quot; - &quot; &amp;  Account.Name  &amp; &quot; - &quot; &amp; Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>