force-app/main/default/objects/Opportunity/fields/Enter_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Enter_Keywords__c</fullName>
    <label>Enter Keywords</label>
    <length>100</length>
    <type>Text</type>
</CustomField>