force-app/main/default/objects/Opportunity/fields/Estimate_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Close_Date__c</fullName>
    <label>Estimate Close Date</label>
    <type>Date</type>
</CustomField>