force-app/main/default/objects/Opportunity/fields/Financial_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Reference_Date__c</fullName>
    <formula>Job_Start_Date__c-DAY(Job_Start_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Reference Date</label>
    <type>Date</type>
</CustomField>