force-app/main/default/objects/Opportunity/fields/Harbor_Quote__c.field-meta.xml
<CustomField>
    <fullName>Harbor_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harbor Quote</label>
    <type>Checkbox</type>
</CustomField>