force-app/main/default/objects/Opportunity/fields/Has_PFAS_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Has_PFAS_Line_Items__c</fullName>
    <formula>PFAS_Count__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has PFAS Line Items</label>
    <type>Checkbox</type>
</CustomField>