force-app/main/default/objects/Opportunity/fields/Healthcare_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Opportunity_Type__c</fullName>
    <description>List of healthcare opportunity types</description>
    <inlineHelpText>Used to categorize Healthcare opportunities</inlineHelpText>
    <label>Healthcare Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Waste (Pharma and RMW)</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Waste</fullName>
            </value>
            <value>
                <fullName>Pathological Waste</fullName>
            </value>
            <value>
                <fullName>Sharps Disposal (disposable)</fullName>
            </value>
            <value>
                <fullName>Sharps Disposal (reusable)</fullName>
            </value>
            <value>
                <fullName>Red Bag Waste (disposable)</fullName>
            </value>
            <value>
                <fullName>Red Bag Waste (reusable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>