force-app/main/default/objects/Opportunity/fields/Hold_from_Central_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Hold_from_Central_Quoting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to decide to prevent a Cross-Sell Quote request from going to the Central Quoting team.</description>
    <label>Hold from Central Quoting</label>
    <type>Checkbox</type>
</CustomField>