force-app/main/default/objects/Opportunity/fields/IIR_ID__c.field-meta.xml
<CustomField>
    <fullName>IIR_ID__c</fullName>
    <description>Industrial Info Resources ID</description>
    <inlineHelpText>Code provided by Industrial Info Resources subscription. Used for Turnaarounds</inlineHelpText>
    <label>Turnaround Industrial Info Resources ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>