force-app/main/default/objects/Opportunity/fields/Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Incident_Id__c</fullName>
    <description>Will Need for sync purposes, Hidden Field</description>
    <externalId>true</externalId>
    <label>Incident Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>