force-app/main/default/objects/Opportunity/fields/Indigenous_Component__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indigenous Component</description>
    <label>Indigenous Component</label>
    <type>Checkbox</type>
</CustomField>