force-app/main/default/objects/Opportunity/fields/Insert_Date__c.field-meta.xml
<CustomField>
    <fullName>Insert_Date__c</fullName>
    <label>Insert Date</label>
    <type>DateTime</type>
</CustomField>