force-app/main/default/objects/Opportunity/fields/InSite__c.field-meta.xml
<CustomField>
    <fullName>InSite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked this opportunity will be for an InSite location.</description>
    <inlineHelpText>When this box is checked this opportunity will be for an InSite location.</inlineHelpText>
    <label>InSite</label>
    <type>Checkbox</type>
</CustomField>