force-app/main/default/objects/Opportunity/fields/Insite_Expert__c.field-meta.xml
<CustomField>
    <fullName>Insite_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person that will be responsible for Insite Sales</description>
    <inlineHelpText>This is the person that will be responsible for Insite Sales</inlineHelpText>
    <label>Insite Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>