force-app/main/default/objects/Opportunity/fields/Inventory_Attached__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cross Sell Inventory Attached</description>
    <label>Inventory Attached</label>
    <type>Checkbox</type>
</CustomField>