force-app/main/default/objects/Opportunity/fields/Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Date__c</fullName>
    <description>Inventory Date to restart the quote request turnaround time</description>
    <label>Inventory Date</label>
    <type>DateTime</type>
</CustomField>