force-app/main/default/objects/Opportunity/fields/IS_Insite_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>IS_Insite_Employee_ID__c</fullName>
    <label>IS Insite Employee ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>