force-app/main/default/objects/Opportunity/fields/Is_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Is_Past_Due__c</fullName>
    <formula>Today()&gt;CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Past Due</label>
    <type>Checkbox</type>
</CustomField>