force-app/main/default/objects/Opportunity/fields/Job_Schedule_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Schedule_Request_Date__c</fullName>
    <label>Job Schedule Request Date</label>
    <type>Date</type>
</CustomField>