force-app/main/default/objects/Opportunity/fields/Job_Schedule_Requested__c.field-meta.xml
<CustomField>
    <fullName>Job_Schedule_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for Schedule the job which creates Schedule Job Case</description>
    <label>Ready to Schedule</label>
    <type>Checkbox</type>
</CustomField>