force-app/main/default/objects/Opportunity/fields/Job_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Scheduled_Date__c</fullName>
    <description>This field is used to schedule the job and also used to calculate Days after Job Scheduled Requested Date.</description>
    <label>Job Scheduled Date</label>
    <type>Date</type>
</CustomField>