force-app/main/default/objects/Opportunity/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <description>This is the date when the job would start.</description>
    <inlineHelpText>This is the date when the job would start.</inlineHelpText>
    <label>Job Start Date</label>
    <type>Date</type>
</CustomField>