force-app/main/default/objects/Opportunity/fields/Job_Start_Month_Group__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Month_Group__c</fullName>
    <formula>CASE(
     MONTH(  Job_Start_Date__c ),
     1, &quot;a - January&quot;,
     2, &quot;b - February&quot;,
     3, &quot;c - March&quot;,
     4, &quot;d - April&quot;,
     5, &quot;e - May&quot;,
     6, &quot;f - June&quot;,
     7, &quot;g - July&quot;,
     8, &quot;h - August&quot;,
     9, &quot;i - September&quot;,
     10, &quot;j - October&quot;,
     11, &quot;k - November&quot;,
     12, &quot;l - December&quot;,
     &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Start Month Group</label>
    <type>Text</type>
</CustomField>