force-app/main/default/objects/Opportunity/fields/Joint_Call_With__c.field-meta.xml
<CustomField>
    <fullName>Joint_Call_With__c</fullName>
    <label>Joint Call With</label>
    <length>85</length>
    <type>Text</type>
</CustomField>