force-app/main/default/objects/Opportunity/fields/Key_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Account Owners</description>
    <label>Corp Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>