force-app/main/default/objects/Opportunity/fields/Key_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Name__c</fullName>
    <formula>Account.Key_Account_Name__c</formula>
    <label>Corp Account Name</label>
    <type>Text</type>
</CustomField>