force-app/main/default/objects/Opportunity/fields/Key_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Owner__c</fullName>
    <formula>IF(Account.RecordType.Name = &apos;Customer Location&apos;,  Account.Parent.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Broker Location&apos;,  Account.Parent.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Distributor Location&apos;,  Account.Parent.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Customer&apos;, Account.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Customer Chain&apos;, Account.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Broker&apos;, Account.Parent.Owner.Person_Name__c
,IF(Account.RecordType.Name = &apos;Distributor&apos;, Account.Parent.Owner.Person_Name__c
,Account.Owner.Person_Name__c
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Account Owner</label>
    <type>Text</type>
</CustomField>