force-app/main/default/objects/Opportunity/fields/Lodge_Camp__c.field-meta.xml
<CustomField>
    <fullName>Lodge_Camp__c</fullName>
    <label>Lodge / Camp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lodge</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>