force-app/main/default/objects/Opportunity/fields/Lodging_Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Number_of_Rooms__c</fullName>
    <description>Lodging Number of Rooms</description>
    <label>Lodging Number of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>